lab 2 done, lab 1 fixed

--- a/lab1/lab1.qmd
+++ b/lab1/lab1.qmd
@@ -82,6 +82,10 @@ format:
 
 В результате практической работы был проведен анализ сетевой активности с помощью SQL.
 
+```{r}
+sprintf("Done")
+```
+
 ## Вывод
 
 Мы получили навыки работы с Yandex Cloud с сервисом Yandex Query и языком структурированных запросов (SQL).
